--- a/05_Merge/Housing Market/Exercises.ipynb
+++ b/05_Merge/Housing Market/Exercises.ipynb
@@ -1,151 +1,482 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Housing Market"
-   ]
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 2",
+      "language": "python",
+      "name": "python2"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 2
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython2",
+      "version": "2.7.11"
+    },
+    "colab": {
+      "name": "Exercises.ipynb",
+      "version": "0.3.2",
+      "provenance": [],
+      "include_colab_link": true
+    }
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Introduction:\n",
-    "\n",
-    "This time we will create our own dataset with fictional numbers to describe a house market. As we are going to create random data don't try to reason of the numbers.\n",
-    "\n",
-    "### Step 1. Import the necessary libraries"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Step 2. Create 3 differents Series, each of length 100, as follows: \n",
-    "1. The first a random number from 1 to 4 \n",
-    "2. The second a random number from 1 to 3\n",
-    "3. The third a random number from 10,000 to 30,000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Step 3. Let's create a DataFrame by joinning the Series by column"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Step 4. Change the name of the columns to bedrs, bathrs, price_sqr_meter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Step 5. Create a one column DataFrame with the values of the 3 Series and assign it to 'bigcolumn'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Step 6. Ops it seems it is going only until index 99. Is it true?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Step 7. Reindex the DataFrame so it goes from 0 to 299"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 2",
-   "language": "python",
-   "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 0
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Tclack88/pandas_exercises/blob/master/05_Merge/Housing%20Market/Exercises.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4bLRbTEVqo3y",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Housing Market"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EBI8hJsEqo36",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Introduction:\n",
+        "\n",
+        "This time we will create our own dataset with fictional numbers to describe a house market. As we are going to create random data don't try to reason of the numbers.\n",
+        "\n",
+        "### Step 1. Import the necessary libraries"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "A6NerY2hqo38",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VNRo5aFGqo4I",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Step 2. Create 3 differents Series, each of length 100, as follows: \n",
+        "1. The first a random number from 1 to 4 \n",
+        "2. The second a random number from 1 to 3\n",
+        "3. The third a random number from 10,000 to 30,000"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IE0qYZEJqo4K",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "a = pd.Series(np.random.uniform(1,4,100))\n",
+        "b = pd.Series(np.random.uniform(1,3,100))\n",
+        "c = pd.Series(np.random.uniform(10000,30000,100))\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "20721gToqo4T",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Step 3. Let's create a DataFrame by joinning the Series by column"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4fx_FMOIqo4V",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "3e252e6a-a909-4f17-ffa6-be11e3e9ff36"
+      },
+      "source": [
+        "df = pd.concat([a,b,c],axis=1)\n",
+        "df.head()"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "      <th>1</th>\n",
+              "      <th>2</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>3.565927</td>\n",
+              "      <td>2.018862</td>\n",
+              "      <td>13943.601623</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1.788815</td>\n",
+              "      <td>1.829857</td>\n",
+              "      <td>10948.968150</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2.058474</td>\n",
+              "      <td>2.518573</td>\n",
+              "      <td>22445.173984</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2.300958</td>\n",
+              "      <td>2.349623</td>\n",
+              "      <td>28171.363895</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>3.440093</td>\n",
+              "      <td>1.947829</td>\n",
+              "      <td>19902.842522</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "          0         1             2\n",
+              "0  3.565927  2.018862  13943.601623\n",
+              "1  1.788815  1.829857  10948.968150\n",
+              "2  2.058474  2.518573  22445.173984\n",
+              "3  2.300958  2.349623  28171.363895\n",
+              "4  3.440093  1.947829  19902.842522"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-3SuD7Ebqo4d",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Step 4. Change the name of the columns to bedrs, bathrs, price_sqr_meter"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U7QFbisKqo4f",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "bbe75d57-4d0a-4dd6-daf8-6f518d92f32b"
+      },
+      "source": [
+        "# This is more complicated, but definitely a way to practice for larger datasets\n",
+        "old_cols = df.columns.tolist()\n",
+        "new_cols = ['bedrs','bathrs','price_sqr_meter']\n",
+        "rename_cols = dict(zip(old_cols,new_cols))\n",
+        "\n",
+        "df = df.rename(columns=rename_cols)\n",
+        "df.head()"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>bedrs</th>\n",
+              "      <th>bathrs</th>\n",
+              "      <th>price_sqr_meter</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>3.565927</td>\n",
+              "      <td>2.018862</td>\n",
+              "      <td>13943.601623</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1.788815</td>\n",
+              "      <td>1.829857</td>\n",
+              "      <td>10948.968150</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2.058474</td>\n",
+              "      <td>2.518573</td>\n",
+              "      <td>22445.173984</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2.300958</td>\n",
+              "      <td>2.349623</td>\n",
+              "      <td>28171.363895</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>3.440093</td>\n",
+              "      <td>1.947829</td>\n",
+              "      <td>19902.842522</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "      bedrs    bathrs  price_sqr_meter\n",
+              "0  3.565927  2.018862     13943.601623\n",
+              "1  1.788815  1.829857     10948.968150\n",
+              "2  2.058474  2.518573     22445.173984\n",
+              "3  2.300958  2.349623     28171.363895\n",
+              "4  3.440093  1.947829     19902.842522"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ujgOVYXWqo4m",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Step 5. Create a one column DataFrame with the values of the 3 Series and assign it to 'bigcolumn'"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "r06QRidpqo4n",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        },
+        "outputId": "6f06a8dc-999d-41ff-fcff-3308dcad8c3a"
+      },
+      "source": [
+        "bigcolumn = pd.concat([a,b,c])\n",
+        "print(bigcolumn.shape)\n",
+        "bigcolumn.head()"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(300,)\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    3.565927\n",
+              "1    1.788815\n",
+              "2    2.058474\n",
+              "3    2.300958\n",
+              "4    3.440093\n",
+              "dtype: float64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tqGq_EJ3qo4s",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Step 6. Ops it seems it is going only until index 99. Is it true?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hJ7nrYjXqo4u",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "8c093fa9-104c-4a93-aa33-c70359d50715"
+      },
+      "source": [
+        "bigcolumn.index.nunique()"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "100"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2NfaFi87qo4y",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Step 7. Reindex the DataFrame so it goes from 0 to 299"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9iXA1kY6qo40",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "bigcolumn = bigcolumn.reset_index()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "em38RcSV--t7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "6410145f-1787-4904-9c9e-5880c3a52e93"
+      },
+      "source": [
+        "bigcolumn.index.nunique()"
+      ],
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "300"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rJCf_cbe_D_z",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    }
+  ]
 }
